--- a/style.css
+++ b/style.css
@@ -24,3 +24,15 @@ body {
   display: flex;
   justify-content: center;
 }
+
+.textArea {
+  border-radius: 0.5rem;
+  background-color: gray;
+  outline: none;
+  border: none;
+  font-size: 1.5rem;
+  z-index: inherit;
+  cursor: default;
+  padding: 10px;
+  margin-top: 2rem;
+}
